--- a/_data/translations.yml
+++ b/_data/translations.yml
@@ -2,14 +2,14 @@ sitetitle:
   en: "China Labor Crackdown Concern Group"
   zh: "中国工运人士关注组"
 
-news：
-  en: News
-  zh: 快讯
+news:
+  en: "News"
+  zh: "快讯"
   
 activists:
-  en: Activists
-  zh: 工运人士
+  en: "Activists"
+  zh: "工运人士"
   
 resources:
-  en: Resources
-  zh: 相关资源
+  en: "Resources"
+  zh: "相关资源"
