--- a/_data/translations.yml
+++ b/_data/translations.yml
@@ -1,15 +1,19 @@
 sitename:
   en: "China Labor Crackdown Concern Group"
   zh: "中国工运人士关注组"
+  zht: "中國工運認識關註組"
 
 news:
   en: "News"
   zh: "快讯"
+  zht: "快訊"
   
 activists:
   en: "Activists"
   zh: "工运人士"
+  zht: "工運人士"
   
 resources:
   en: "Resources"
   zh: "相关资源"
+  zht: "相關資源"
