--- a/_data/translations.yml
+++ b/_data/translations.yml
@@ -8,6 +8,11 @@ news:
   zh: "快讯"
   zht: "快訊"
   
+support:
+  en: "Take Action"
+  zh: "声援行动"
+  zht: "聲援行動"
+  
 activists:
   en: "Activists"
   zh: "工运人士"
