--- a/_data/translations.yml
+++ b/_data/translations.yml
@@ -1,7 +1,7 @@
 sitename:
   en: "China Labor Crackdown Concern Group"
   zh: "中国工运人士关注组"
-  zht: "中國工運人士關註組"
+  zht: "中國工運人士關注組"
 
 news:
   en: "News"
